fixed font/weight issues on Event page, added grey background, better spacing, fixed name sizing issue on mobile on About page

--- a/src/app/containers/event-card/EventCard.scss
+++ b/src/app/containers/event-card/EventCard.scss
@@ -43,8 +43,9 @@
   padding-top: 8px;
   text-align: left;
   padding-left: 18px;
-  font-weight: bolder;
-  font-size: 20px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
 }
 
 .bottom-text-event-card {
